--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,7 @@ services:
     startCommand: cd backend && gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.7 
+        value: 3.9.7
+      - key: PRODUCTION
+        value: true
+    healthCheckPath: /health 
