--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+setuptools==68.0.0
+wheel==0.40.0
 Flask==2.0.1
 Flask-CORS==3.0.10
 pandas==1.3.0
 scikit-learn==0.24.2
-numpy==1.21.0
+numpy==1.19.3
 Werkzeug==2.0.1
 click==8.0.1
 itsdangerous==2.0.1
