--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,10 @@ services:
   - type: web
     name: disease-prediction-api
     env: python
+    runtime: "python3.9"
     buildCommand: pip install -r requirements.txt
-    startCommand: cd backend && gunicorn app:app
+    startCommand: gunicorn backend.app:app
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.7
       - key: PRODUCTION
         value: true
     healthCheckPath: /health 
